--- a/SportsSideKick/app/src/main/res/layout-large/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/wall_item_user_post.xml
@@ -51,7 +51,7 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/user_details"
+        android:layout_above="@id/user_details"
         android:layout_below="@id/images_container"
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginStart="@dimen/margin_20"
