--- a/SportsSideKick/app/src/brugge/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/brugge/res/layout/fragment_news_item.xml
@@ -58,7 +58,7 @@
         android:id="@+id/rumours_swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/post_container"
+        android:layout_above="@id/post_container"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/top_buttons_container"
         app:srl_direction="bottom">
