--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_chat.xml
@@ -72,7 +72,7 @@
         android:id="@+id/active_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom"
+        android:layout_above="@id/bottom"
         android:layout_margin="@dimen/margin_20"
         android:visibility="gone">
 
