--- a/SportsSideKick/app/src/main/res/layout-large/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_video_player.xml
@@ -41,7 +41,7 @@
         android:id="@+id/controls_container"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_above="@+id/time_info"
+        android:layout_above="@id/time_info"
         android:layout_alignParentEnd="true">
 
         <ImageView
