--- a/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/scrolling_news_title"
+                android:layout_above="@id/scrolling_news_title"
                 android:layout_toEndOf="@+id/logo"
                 android:paddingBottom="@dimen/half_margin"
                 android:textAllCaps="true"
@@ -220,7 +220,7 @@
             android:id="@+id/tabs_container_top_right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/bottom_right_container"
+            android:layout_above="@id/bottom_right_container"
             android:layout_marginBottom="@dimen/margin_8"
             android:layout_marginStart="@dimen/half_margin"
             android:layout_toEndOf="@+id/middle_split"
