--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -68,7 +68,7 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/input_container"
+        android:layout_above="@id/input_container"
         android:layout_below="@id/chat_info_line"
         android:layout_marginTop="@dimen/margin_negative_48">
 
@@ -311,7 +311,7 @@
             android:id="@+id/video_layout"
             android:layout_width="fill_parent"
             android:layout_height="200dp"
-            android:layout_above="@+id/vide_download_image_button"
+            android:layout_above="@id/vide_download_image_button"
             android:layout_below="@id/video_close_image_button"
             android:layout_centerInParent="true"
             android:background="@android:color/black">
@@ -366,7 +366,7 @@
             android:id="@+id/image_fullscreen"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/download_image_button"
+            android:layout_above="@id/download_image_button"
             android:layout_below="@id/close_image_button"
             android:layout_centerInParent="true"
             android:background="@color/colorPrimarySemiDarkSemiTransparent"
@@ -430,7 +430,7 @@
                 android:id="@+id/logo"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_80"
-                android:layout_above="@+id/text1"
+                android:layout_above="@id/text1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="@dimen/margin_20"
                 android:contentDescription="@null"
@@ -441,7 +441,7 @@
                 android:id="@+id/text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/description"
+                android:layout_above="@id/description"
                 android:layout_centerHorizontal="true"
                 android:text="@string/chat_with_friends_login"
                 android:textAlignment="center"
@@ -452,7 +452,7 @@
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/center_below"
+                android:layout_above="@id/center_below"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_20"
                 android:text="@string/login_slider_chat"
