--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -27,7 +27,7 @@
         android:id="@+id/container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_buttons_container_login"
+        android:layout_above="@id/bottom_buttons_container_login"
         android:layout_below="@id/top_buttons_container">
 
         <RelativeLayout
@@ -201,7 +201,7 @@
         android:id="@+id/bottom_buttons_container_login"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@+id/forgot_button"
+        android:layout_above="@id/forgot_button"
         android:layout_marginEnd="@dimen/margin_30"
         android:layout_marginStart="@dimen/margin_30"
         android:background="@drawable/button_login_login"
@@ -232,7 +232,7 @@
         android:id="@+id/bottom_buttons_container_reset"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@+id/forgot_button"
+        android:layout_above="@id/forgot_button"
         android:layout_marginEnd="@dimen/margin_30"
         android:layout_marginStart="@dimen/margin_30"
         android:background="@drawable/button_login_login"
