--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -88,7 +88,7 @@
         android:id="@+id/active_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom"
+        android:layout_above="@id/bottom"
         android:visibility="gone">
 
         <RelativeLayout
@@ -248,7 +248,7 @@
                 android:id="@+id/logo"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/height_80"
-                android:layout_above="@+id/text1"
+                android:layout_above="@id/text1"
                 android:layout_alignEnd="@+id/begin_your_call"
                 android:layout_alignStart="@+id/begin_your_call"
                 android:layout_centerHorizontal="true"
@@ -261,7 +261,7 @@
                 android:id="@+id/camera_logo"
                 android:layout_width="@dimen/height_130"
                 android:layout_height="@dimen/height_130"
-                android:layout_above="@+id/text1"
+                android:layout_above="@id/text1"
                 android:layout_alignEnd="@+id/begin_your_call"
                 android:layout_alignStart="@+id/begin_your_call"
                 android:layout_centerHorizontal="true"
@@ -275,7 +275,7 @@
                 android:id="@+id/text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/description"
+                android:layout_above="@id/description"
                 android:layout_centerHorizontal="true"
                 android:text="@string/video_chat_promo_1 "
                 android:textAlignment="center"
@@ -286,7 +286,7 @@
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/center_below"
+                android:layout_above="@id/center_below"
 
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_20"
