--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:descendantFocusability="blocksDescendants"
-        android:layout_above="@+id/container"
+        android:layout_above="@id/container"
         app:srl_direction="bottom">
 
         <android.support.v4.widget.NestedScrollView
@@ -263,14 +263,14 @@
         android:id="@+id/shadow"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/height_2"
-        android:layout_above="@+id/fragment_wall_bottom_bar"
+        android:layout_above="@id/fragment_wall_bottom_bar"
         android:background="@drawable/top_gradient_drawable" />
 
     <RelativeLayout
         android:id="@+id/fragment_wall_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@+id/shadow_1"
+        android:layout_above="@id/shadow_1"
         android:layout_alignParentStart="true"
         android:animateLayoutChanges="true"
         android:background="?phoneWallMenuBackground"
