--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -268,7 +268,7 @@
         android:id="@+id/chat_friends_in_chat_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/confirm_button"
+        android:layout_above="@id/confirm_button"
         android:background="@color/colorPrimary">
 
         <TextView
@@ -310,7 +310,7 @@
         android:id="@+id/friends_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/chat_friends_in_chat_container"
+        android:layout_above="@id/chat_friends_in_chat_container"
         android:layout_alignParentStart="true"
         android:layout_below="@id/chat_search_friends_container"
         android:layout_marginEnd="@dimen/margin_16"
