--- a/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_constraintBottom_toTopOf="@+id/preview_video_view">
+    app:layout_constraintBottom_toTopOf="@id/preview_video_view">
 
     <ProgressBar
         style="?android:attr/progressBarStyle"
@@ -27,7 +27,7 @@
         android:layout_centerInParent="true"
         android:src="@drawable/video_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/user_name_text_view"
+        app:layout_constraintBottom_toTopOf="@id/user_name_text_view"
         app:layout_constraintDimensionRatio="4.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -40,7 +40,7 @@
         android:layout_centerInParent="true"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/user_name_text_view"
+        app:layout_constraintBottom_toTopOf="@id/user_name_text_view"
         app:layout_constraintDimensionRatio="1.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -57,6 +57,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/video_view" />
+        app:layout_constraintTop_toBottomOf="@id/video_view" />
 
 </android.support.constraint.ConstraintLayout>
